tests/snapshots/batch_tests__snapshot_batch_separators_visible.snap
---
source: tests/batch_tests.rs
expression: output
---
web [Stopped] | worker [Stopped]                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
[12:00:00] web: Starting web server on port 3000                                                                        
[12:00:00] web: Loading configuration                                                                                   
[12:00:00] web: Database connected                                                                                      
─────────────────────────────── Batch 2 (2 logs) ───────────────────────────────                                        
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed                                                                                  
─────────────────────────────── Batch 3 (1 logs) ───────────────────────────────                                        
[12:00:01] web: GET /api/users 200 OK                                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 6 lines   | 3 batches [TAIL]                                                                   
Press : for commands, / to search, q to quit
